Added javadocs and deleted redundant method

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=/Users/tritowntim/war-and-peace.txt peace
+application.args=/war-and-peace.txt peace
 compile.on.save=true
 do.depend=false
 do.jar=true
